--- a/phenotype-macro/Cargo.toml
+++ b/phenotype-macro/Cargo.toml
@@ -8,6 +8,7 @@ proc-macro = true
 
 [dependencies]
 phenotype-internal = {  path = "../phenotype-internal"}
+proc-macro2 = "1.0"
 quote = { version = "1.0" }
 syn = { version = "1.0", features = ["derive", "printing"] }
 proc-macro-error = "1.0"
