--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 phenotype-internal = { version = "0.1.0", path = "phenotype-internal"}
 phenotype-macro = { version = "0.1.0", path = "phenotype-macro"}
+bitvec = "1.0.1"
 
 [workspace]
 members = [
