--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ documentation = "https://docs.rs/peapod"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/fprasx/peapod"
+homepage = "https://github.com/fprasx/peapod"
 
 [dependencies]
 phenotype-internal = { version = "0.1.0", path = "phenotype-internal" }
